Fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,18 @@
 	.member .image {
 		width: 100%;
 	}
-	
+	.member .name-plate{
+		display: table;
+	    height: 80px;
+	    width: 100%;
+	    /* display: inline-block; */
+	    /* text-align: center; */
+	    /* vertical-align: middle; */
+	}
+	.member .name-plate > * {
+	    display: table-cell;
+	    vertical-align: middle;
+	}
 	.member .name-plate,
 	.member .name-plate b {
 	    font-size: 21px;
